--- a/Website2-html-css/style.css
+++ b/Website2-html-css/style.css
@@ -5,7 +5,7 @@ body
     font-family: sans-serif;
     background: url(bg.jpg);
     background-size: cover;
-    
+
 }
 
 .box
@@ -83,6 +83,11 @@ body
     border-radius: 5px;
 }
 
+
+.test {
+
+    color: blue;
+}
 
 
 
